change nav bar width px

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -31,12 +31,12 @@
     <div>
         <table>
             <tr>
-                <th style="width: 160px;"><a href="/">Nodvel list</a></th>
-                <th style="width: 160px;"><a href="/topten">Most liked Nodvel</a></th>
-                <th style="width: 160px;"><a href="/search">Search Nodvel</a></th>
-                <th style="width: 160px;"><a href="/like">Favorits</a></th>
-                <th style="width: 160px;"><a href="/mynodvel">My Nodvel</a></th>
-                <th style="width: 160px;"><a href="/help">Manual</a></th>
+                <th style="width: 183px;"><a href="/">Nodvel list</a></th>
+                <th style="width: 183px;"><a href="/topten">Most liked Nodvel</a></th>
+                <th style="width: 183px;"><a href="/search">Search Nodvel</a></th>
+                <th style="width: 183px;"><a href="/like">My favorits</a></th>
+                <th style="width: 183px;"><a href="/mynodvel">My Nodvel</a></th>
+                <th style="width: 183px;"><a href="/help">Manual</a></th>
             </tr>
         <table>
     </div>
