little change of url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 		<% i++ %>
 		<tr>
 			<th scope="row"><%= i %></th>
-			<td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><a href="/board/<%= item.title %>"><%= item.title %></a></td>
+			<td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><a href="/nodvel/<%= item.title %>"><%= item.title %></a></td>
 			<td><%= item.writer %></td>
 			<td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.date %></td>
 			<td><%= item.genre</td>
