--- a/views/topten.ejs
+++ b/views/topten.ejs
@@ -23,8 +23,8 @@
 					<td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><a href="/nodvel/<%= item.title %>"><%= item.title %></a></td>
 					<td><%= item.writer %></td>
 					<td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.date %></td>
-					<td><%= item.genre</td>
-					<td><%= item.like</td>
+					<td><%= item.genre %></td>
+					<td><%= item.like %></td>
 				</tr>
 				<% }) %>
 			<% } else { %>
@@ -40,12 +40,13 @@
 <div>
     <table>
         <tr>
-            <th><a href="/topten/"></a></th>
-            <th><a href="/topten/"></a></th>
-            <th><a href="/topten/"></a></th>
-            <th><a href="/topten/"></a></th>
-            <th><a href="/topten/"></a></th>
-            <th><a href="/topten/"></a></th>
+            <th><a href="/topten/romance">Romance</a></th>
+            <th><a href="/topten/horror">Horror</a></th>
+            <th><a href="/topten/fantasy">Fantasy</a></th>
+            <th><a href="/topten/sf">SF</a></th>
+            <th><a href="/topten/thriller">Thriller</a></th>
+			<th><a href="/topten/historical">Historical</a></th>
+			<th><a href="/topten/general">General</a></th>
         </tr>
     </table>
 </div>
