just change 'it' to 'is'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
 <br>
 <p>Nodvel is compound word of "Node.js" and "novel"</p>
 <br>
-<h2>What it that mean?</h2>
+<h2>What is that mean?</h2>
 <br>
 <p>It mean, Nodvel is visual novel making web service.</p>
 <p>Anyone can make their own visual novel in here.</p>
