--- a/views/writenodvel.ejs
+++ b/views/writenodvel.ejs
@@ -11,7 +11,7 @@
 	<input name="story" type="text" class="form-control" placeholder="Story" required>
 	<br>
 	<h4>Select main genre</h4>
-	<select name="genre" class="selectpicker" required>
+	<select name="genre" class="selectpicker" style="width: 400px; height: 40px; line-height: 4q0px;" required>
 		<option value="romance">Romance</option>
 		<option value="horror">Horror</option>
 		<option value="sf">SF</option>
@@ -20,6 +20,7 @@
 		<option value="thriller">Thriller</option>
 		<option value="general">General</option>
 	</select>
+	<br>
 	<br>
     <input type="submit" value="Next" class="btn btn-default pull-right">
 	<a href="/" class="btn btn-default pull-left">Cancel</a>
