change some tags

--- a/views/favorits.ejs
+++ b/views/favorits.ejs
@@ -1,7 +1,7 @@
 <% include _header %>
 
 <h2>My favorits</h2>
-<div style="height: 600px; width: 1100px; overflow: auto;">
+<div>
 	<table style="table-layout: fixed;" class="table table-striped">
 		<thead>
 			<tr>
@@ -26,7 +26,7 @@
                     <td colspan="6">No contents</td>
                 </tr>
             <% } %>
-			</tbody>
+		</tbody>
 	</table>
 </div>
 <br>
