--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -1,5 +1,32 @@
 <% include _header %>
 
 <h1>Nodvel Manual</h1>
+<hr>
+<h2>Before using</h2>
+<a>0. First, sorry for my poor english.</a>
+<a>1. Signin and Login are needed for all contents.</a>
+<a>2. We demand only ID and password.</a>
+<a>3. As we write in main page, we don't take any responsibility about Copyright.</a>
+<a>4. If you want code in this service, can find at bottom of this page.</a>
+<hr>
+<h2>Make Nodvel</h2>
+<h3>1. 'Divergence' mean time line of story.</h3>
+<a>You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this.</a>
+<a>If you make player choose 1 of 2 answer and that choice divide time line, there will be 2 divergence.</a>
+<a>'Divergence' is necessary thing. You must write down.</a>
+<a>Be care about what divergence is that page have.</a>
+<h3>2. 'Page' mean one scene.</h3>
+<a>Page is also "Number", and recommended "Ascending" number of story procedure.</a>
+<a>In one divergence, page that have same page number can't be exist.</a>
+<a>'Page' is also necessay. You must write down.</a>
+<a>Like divergence, page is important. Please think before write.</a>
+<h3>3. 'Next divergence' mean divergence of next page.</h3>
+<a>To link page. Nodvel demand you to think about next page.</a>
+<a>For example, if i write one divergence story, next divergence must be same.</a>
+<a>Other thing is same as 'Divergence'.</a>
+<h3>4. 'Next page' is literally page number of next scene.</h3>
+<a>Same purpose with 'Next divergence'.</a>
+<a>If you want, you can link to past. When 'Page' is 15 and 'Next page' is 10, you can make player go to back scene.</a>
+<a>Other thing is also similar with 'Page'.</a>
 
 <% include _footer %>
