--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -2,31 +2,77 @@
 
 <h1>Nodvel Manual</h1>
 <hr>
-<h2>Before using</h2>
-<a>0. First, sorry for my poor english.</a>
-<a>1. Signin and Login are needed for all contents.</a>
-<a>2. We demand only ID and password.</a>
-<a>3. As we write in main page, we don't take any responsibility about Copyright.</a>
-<a>4. If you want code in this service, can find at bottom of this page.</a>
+<h2>Contents list</h2>
+<ul>
+    <li><a href="#before">Before using</a></li>
+    <li><a href="#information">Write simple imformation</a></li>
+    <li>
+        <a href="#make">Make scene of Nodvel</a>
+        <ul>
+            <li><a href="#divergence">1. 'Divergence' mean time line of story.</a></li>
+            <li><a href="#page">2. 'Page' mean one scene.</a></li>
+            <li><a href="#nextDivergence">3. 'Next divergence' mean divergence of next page.</a></li>
+            <li><a href="#nextPage">4. 'Next page' is literally page number of next scene.</a></li>
+            <li><a href="#memo">5. 'Memo' is simple comment about scene.</a></li>
+            <li><a href="#images">6. 'Character' and 'Background' is image of it's own name.</a></li>
+            <li><a href="#text">7. 'Text' is character's words.</a></li>
+        </ul>
+    </li>
+</ul>
 <hr>
-<h2>Make Nodvel</h2>
-<h3>1. 'Divergence' mean time line of story.</h3>
-<a>You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this.</a>
-<a>If you make player choose 1 of 2 answer and that choice divide time line, there will be 2 divergence.</a>
-<a>'Divergence' is necessary thing. You must write down.</a>
-<a>Be care about what divergence is that page have.</a>
-<h3>2. 'Page' mean one scene.</h3>
-<a>Page is also "Number", and recommended "Ascending" number of story procedure.</a>
-<a>In one divergence, page that have same page number can't be exist.</a>
-<a>'Page' is also necessay. You must write down.</a>
-<a>Like divergence, page is important. Please think before write.</a>
-<h3>3. 'Next divergence' mean divergence of next page.</h3>
-<a>To link page. Nodvel demand you to think about next page.</a>
-<a>For example, if i write one divergence story, next divergence must be same.</a>
-<a>Other thing is same as 'Divergence'.</a>
-<h3>4. 'Next page' is literally page number of next scene.</h3>
-<a>Same purpose with 'Next divergence'.</a>
-<a>If you want, you can link to past. When 'Page' is 15 and 'Next page' is 10, you can make player go to back scene.</a>
-<a>Other thing is also similar with 'Page'.</a>
+<br>
+<h2 id="before">Before using</h2>
+<p>0. First, sorry for my poor english.</p>
+<p>1. Signin and Login are needed for all contents.</p>
+<p>2. We demand only ID and password.</p>
+<p>3. As we write in main page, we don't take any responsibility about Copyright.</p>
+<p>4. If you want code in this service, can find at bottom of this page.</p>
+<hr>
+<h2 id="information">Write simple imformation</h2>
+<p>1. I think there's noone that don't know about 'Title', right?</p>
+<p>2. 'Preview of story' is story introduction of Nodvel. Not all of story, just a little.</p>
+<p>3. You should choose 'Main genre' in the select.</p>
+<p>I know you can make SF horror romance story, but you can't choose all. Just main "ONE" genre.</p>
+<hr>
+<h2 id="make">Make scene of Nodvel</h2>
+<h3 id="divergence">1. 'Divergence' mean time line of story.</h3>
+<p>You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this.</p>
+<p>If you make player choose 1 of 2 answer and that choice divide time line, there will be 2 divergence.</p>
+<p>'Divergence' is necessary thing. You must write down.</p>
+<p>Be care about what divergence is that page have.</p>
+<br>
+<h3 id="page">2. 'Page' mean one scene.</h3>
+<p>Page is also "Number", and recommended "Ascending" number of story procedure.</p>
+<p>In one divergence, page that have same page number can't be exist.</p>
+<p>'Page' is also necessay. You must write down.</p>
+<p>Like divergence, page is important. Please think before write.</p>
+<br>
+<h3 id="nextDivergence">3. 'Next divergence' mean divergence of next page.</h3>
+<p>To link page. Nodvel demand you to think about next page.</p>
+<p>For example, if i write one divergence story, next divergence must be same.</p>
+<p>Other thing is same as 'Divergence'.</p>
+<br>
+<h3 id="nextPage">4. 'Next page' is literally page number of next scene.</h3>
+<p>Same purpose with 'Next divergence'.</p>
+<p>If you want, you can link to past. When 'Page' is 15 and 'Next page' is 10, you can make player go to back scene.</p>
+<p>Other thing is also similar with 'Page'.</p>
+<br>
+<h3 id="memo">5. 'Memo' is simple comment about scene.</h3>
+<p>Not a necessary thing.</p>
+<p>When you search certain scene, server use 'memo' for searching.</p>
+<p>You can use as kind of bookmark.</p>
+<br>
+<h3 id="images">6. 'Character' and 'Background' is image of it's own name.</h3>
+<p>Not a necessary thing.</p>
+<p>Before setting image, you must upload files first. After that, you can select image.</p>
+<p>Maximum number of 'character' is 4, minimum is 0. Yes, you can set all 'character' as "none".</p>
+<p>You can set 'background' also as "none" and it will make background black.</p>
+<p>If you set 'Choice' and 'Character' together, 'choice' has priority. It will go up.</p>
+<br>
+<h3 id="text">7. 'Text' is character's words.</h3>
+<p>You must type name with words to show who is saying.</p>
+<p>For example, "Donald Trump: I like racism!". Who is Donald Trump, anyway?</p>
+<p>And replaceing line is not allowed. Please, mind this.</p>
+<br>
 
 <% include _footer %>
