complete manual.ejs

--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -5,7 +5,7 @@
 <h2>Contents list</h2>
 <ul>
     <li><a href="#before">Before using</a></li>
-    <li><a href="#information">Write simple imformation</a></li>
+    <li><a href="#information">Write simple imformation of Nodvel</a></li>
     <li>
         <a href="#make">Make scene of Nodvel</a>
         <ul>
@@ -16,19 +16,20 @@
             <li><a href="#memo">5. 'Memo' is simple comment about scene.</a></li>
             <li><a href="#images">6. 'Character' and 'Background' is image of it's own name.</a></li>
             <li><a href="#text">7. 'Text' is character's words.</a></li>
+            <li><a href="#choice">8. 'Choice' make player choose.</a></li>
         </ul>
     </li>
 </ul>
 <hr>
 <br>
 <h2 id="before">Before using</h2>
-<p>0. First, sorry for my poor english.</p>
+<p>0. First, i apologize for my poor english.</p>
 <p>1. Signin and Login are needed for all contents.</p>
 <p>2. We demand only ID and password.</p>
 <p>3. As we write in main page, we don't take any responsibility about Copyright.</p>
 <p>4. If you want code in this service, can find at bottom of this page.</p>
 <hr>
-<h2 id="information">Write simple imformation</h2>
+<h2 id="information">Write simple imformation of Nodvel</h2>
 <p>1. I think there's noone that don't know about 'Title', right?</p>
 <p>2. 'Preview of story' is story introduction of Nodvel. Not all of story, just a little.</p>
 <p>3. You should choose 'Main genre' in the select.</p>
@@ -37,12 +38,12 @@
 <h2 id="make">Make scene of Nodvel</h2>
 <h3 id="divergence">1. 'Divergence' mean time line of story.</h3>
 <p>You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this.</p>
-<p>If you make player choose 1 of 2 answer and that choice divide time line, there will be 2 divergence.</p>
+<p>For example, if you make player choose 1 of 2 answer and that choice divide time line. It mean, there will be 2 divergence.</p>
 <p>'Divergence' is necessary thing. You must write down.</p>
-<p>Be care about what divergence is that page have.</p>
+<p>Be care about divergence, wrong divergence mean wrong time line.</p>
 <br>
 <h3 id="page">2. 'Page' mean one scene.</h3>
-<p>Page is also "Number", and recommended "Ascending" number of story procedure.</p>
+<p>Page is also "Number", and recommended "Ascending" number of story procedure(1 -> 2 -> 3, like this).</p>
 <p>In one divergence, page that have same page number can't be exist.</p>
 <p>'Page' is also necessay. You must write down.</p>
 <p>Like divergence, page is important. Please think before write.</p>
@@ -73,6 +74,13 @@
 <p>You must type name with words to show who is saying.</p>
 <p>For example, "Donald Trump: I like racism!". Who is Donald Trump, anyway?</p>
 <p>And replaceing line is not allowed. Please, mind this.</p>
+<p>'Text' also used for searching.</p>
+<br>
+<h3 id="choice">8. 'Choice' make player choose.</h3>
+<p>If your friend say "Hey dude! Wanna go party tonight?" you should choose what to say. 'choice' is same thing.</p>
+<p>Not only words, you can use for everything that you want.</p>
+<p>Each 'choice' have text, next divergence and next page. I believe you know already.</p>
+<p>Maximum number of 'choice' is 4, minimum is 0. Same as 'character'.</p>
 <br>
 
 <% include _footer %>
