--- a/views/topten.ejs
+++ b/views/topten.ejs
@@ -1,6 +1,10 @@
 <% include _header %>
 
 <h2>Most liked Nodvel</h2>
+<br>
+<h3>Top ten Nodvel that most liked from people.</h3>
+<hr>
+<br>
 <% if(genre) { %>
 	<h3><%= genre %> story</h3>
 <% } %>
@@ -39,7 +43,7 @@
 	</table>
 </div>
 <br>
-<h3>Each Genre</h3>
+<h3>Top ten Nodvel of each Genre</h3>
 <div>
     <table>
         <tr>
@@ -48,8 +52,8 @@
             <th style="width: 154px; text-align: center;"><a style="color: crimson;" href="/topten/Fantasy">Fantasy</a></th>
             <th style="width: 154px; text-align: center;"><a style="color: crimson;" href="/topten/SF">SF</a></th>
             <th style="width: 154px; text-align: center;"><a style="color: crimson;" href="/topten/Thriller">Thriller</a></th>
-	    <th style="width: 154px; text-align: center;"><a style="color: crimson;" href="/topten/Historical">Historical</a></th>
-	    <th style="width: 154px; text-align: center;"><a style="color: crimson;" href="/topten/General">General</a></th>
+			<th style="width: 154px; text-align: center;"><a style="color: crimson;" href="/topten/Historical">Historical</a></th>
+			<th style="width: 154px; text-align: center;"><a style="color: crimson;" href="/topten/General">General</a></th>
         </tr>
     </table>
 </div>
