complete mynodvel.ejs

--- a/views/mynodvel.ejs
+++ b/views/mynodvel.ejs
@@ -1,6 +1,10 @@
 <% include _header %>
 
 <h2>My Nodvel</h2>
+<br>
+<h3>List of Nodvel that i making now or finished.</h3>
+<hr>
+<br>
 <div>
 	<table style="table-layout: fixed;" class="table table-striped">
 		<thead>
