complete _header.ejs

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -29,12 +29,13 @@
             <div>
                 <table>
                     <tr>
-                        <th style="width: 183px; text-align: center;"><a href="/">Nodvel list</a></th>
-                        <th style="width: 183px; text-align: center;"><a href="/topten">Most liked Nodvel</a></th>
-                        <th style="width: 183px; text-align: center;"><a href="/search">Search Nodvel</a></th>
-                        <th style="width: 183px; text-align: center;"><a href="/like">My favorits</a></th>
-                        <th style="width: 183px; text-align: center;"><a href="/mynodvel">My Nodvel</a></th>
-                        <th style="width: 183px; text-align: center;"><a href="/help">Manual</a></th>
+                        <th style="width: 157px; text-align: center;"><a href="/">Nodvel list</a></th>
+                        <th style="width: 157px; text-align: center;"><a href="/topten">Most liked Nodvel</a></th>
+                        <th style="width: 157px; text-align: center;"><a href="/search">Search Nodvel</a></th>
+                        <th style="width: 157px; text-align: center;"><a href="/like">My favorits</a></th>
+                        <th style="width: 157px; text-align: center;"><a href="/mynodvel">My Nodvel</a></th>
+                        <th style="width: 157px; text-align: center;"><a href="/saved">Manual</a></th>
+                        <th style="width: 157px; text-align: center;"><a href="/help">Manual</a></th>
                     </tr>
                 <table>
             </div>
