complete search.ejs

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,10 @@
 <% include _header %>
 
 <h2>Search</h2>
+<br>
+<h3>Find word in Title, Preview of story and Writer.</h3>
+<hr>
+<br>
 <table style="table-layout: fixed; height: 600px; width: 1100px; overflow: auto;" class="table table-striped">
 	<thead>
 		<tr>
