add limit input file type

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -5,7 +5,7 @@
     <select name="character" style="display: none;">
         <option value="character" selected>character</option>
     </select>
-    <input type="file" class="filestyle" style="float: left;" required>
+    <input type="file" class="filestyle" accept=".jpeg, .jpg, .png" style="float: left;" required>
     <input type="submit" class="btn btn-default" style="float: left;">
 </form>
 <br>
@@ -22,7 +22,7 @@
     <select name="background" style="display: none;">
         <option value="background" selected>background</option>
     </select>
-    <input type="file" class="filestyle" style="float: left;" required>
+    <input type="file" class="filestyle" accept=".jpeg, .jpg, .png" style="float: left;" required>
     <input type="submit" class="btn btn-default" style="float: left;">
 </form>
 <br>
