--- a/views/nodvel.ejs
+++ b/views/nodvel.ejs
@@ -8,31 +8,71 @@
 <div style="white-space: pre; width: 400px; height: 40px;"><%= contents.story %></div>
 <hr>
 <% if(nodvel.ended) { %> 
-<% if(user.like.length > 0) { %>
-    <% let conut = 0 %>
-    <% for(let i = 0; i < user.like.length; i++) { %>
-        <% if(user.like[i].title === contents.title) { %>
-            <form action="/nodvel/<%= nodvel.title %>" method="post">
-                <select name="cancellike" style="display: none;">
-                    <option value="cancellike" selected>cancellike</option>
-                </select>
-                <input type="submit" class="btn btn-default" style="float: right;" value="Cancel like">
-            </form>
-            <% count = 1 %> 
-            <% break %>
+    <% if(user.like.length > 0) { %>
+        <% let conut = 0 %>
+        <% for(let i = 0; i < user.like.length; i++) { %>
+            <% if(user.like[i].title === contents.title) { %>
+                <form action="/nodvel/<%= nodvel.title %>" method="post">
+                    <select name="cancellike" style="display: none;">
+                        <option value="cancellike" selected>cancellike</option>
+                    </select>
+                    <input type="submit" class="btn btn-default" style="float: right;" value="Cancel like">
+                </form>
+                <% count = 1 %> 
+                <% break %>
+            <% } %>
+        <% } %>    
+        <% if(count === 0) { %>
+        <form action="/nodvel/<%= nodvel.title %>" method="post">
+            <select name="like" style="display: none;">
+                <option value="like" selected>like</option>
+            </select>
+            <input type="submit" class="btn btn-default" style="float: right;" value="Give like">
+        </form>
         <% } %>
-    <% } %>    
-    <% if(count === 0) { %>
-    <form action="/nodvel/<%= nodvel.title %>" method="post">
-        <select name="like" style="display: none;">
-            <option value="like" selected>like</option>
-        </select>
-        <input type="submit" class="btn btn-default" style="float: right;" value="Give like">
-    </form>
     <% } %>
-<% } %>
+    <a href="/nodvel/<%= contents.title %>/1/1" class="btn btn-default" style="width: 1100px; height: 30px;">Start Nodvel!</a>
+    <% if(user.username === contents.writer) { %>
+        <hr>
+        <form action="/nodvel/<%= nodvel.title %>" method="post">
+            <select name="rewrite" style="display: none;">
+                <option value="rewrite" selected>rewrite</option>
+            </select>
+            <input type="submit" class="btn btn-default" style="float: right;" value="Rewrite this Nodvel">
+        </form>
+    <% } %>
+    <hr>
+    <br>
+    <h3>Comments</h3>
+    <p>How was this Nodvel?</p>
+    <br>
+    <% if (contents.comment.length > 0) { %>
+        <% contents.comment.forEach(function(item) { %>
+            <div>
+                <div><%= item.name %> / <%= item.date %></div>
+                <div><%= item.memo %></div>
+                <hr>
+                </div>
+        <% }) %>
+    <% } else { %>
+        <div><h4>There's no comment yet.</h4></div>
+    <% } %>
+    <br>
+    <form action="/nodvel/<%= contents.title %>" method="post">
+        <input id="comment" autocomplete="off" type="text" class="form-control" placeholder="Comment" name="comment" style="width: 900px; float: left;">
+        <input type="submit" value="Comment" class="btn btn-default" style="float: left;">
+    </form>
+    <br>
 <% } else { %>
-
+    <a href="/writenodvel/rewrite/<%= nodvel.title %>" style="float: left;" class="btn btn-default">Change simple info</a>
+    <form action="/nodvel/<%= nodvel.title %>" method="post">
+        <select name="end" style="display: none;">
+            <option value="end" selected>end</option>
+        </select>
+        <input type="submit" class="btn btn-default" style="float: right;" value="Finish writing">
+    </form>
+    <hr>
+    <a href="/writenodvel/<%= contents.title %>/1/1" class="btn btn-default" style="width: 1100px; height: 30px;">Rewrite page</a>
 <% } %>
 
 <% include _footer %>
