--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -6,81 +6,55 @@
 <ul>
     <li><a href="#before">Before using</a></li>
     <li><a href="#information">Write simple imformation of Nodvel</a></li>
-    <li>
-        <a href="#make">Make scene of Nodvel</a>
-        <ul>
-            <li><a href="#divergence">1. 'Divergence' mean time line of story.</a></li>
-            <li><a href="#page">2. 'Page' mean one scene.</a></li>
-            <li><a href="#nextDivergence">3. 'Next divergence' mean divergence of next page.</a></li>
-            <li><a href="#nextPage">4. 'Next page' is literally page number of next scene.</a></li>
-            <li><a href="#memo">5. 'Memo' is simple comment about scene.</a></li>
-            <li><a href="#images">6. 'Character' and 'Background' is image of it's own name.</a></li>
-            <li><a href="#text">7. 'Text' is character's words.</a></li>
-            <li><a href="#choice">8. 'Choice' make player choose.</a></li>
-        </ul>
-    </li>
+    <li><a href="#make">Make scene of Nodvel</a></li>
+    <li><a href="#rewrite">When you rewrite</a></li>
 </ul>
 <hr>
 <br>
 <h2 id="before">Before using</h2>
-<p>0. First, i apologize for my poor english.</p>
-<p>1. Signin and Login are needed for all contents.</p>
-<p>2. We demand only ID and password.</p>
-<p>3. As we write in main page, we don't take any responsibility about Copyright.</p>
-<p>4. If you want code in this service, can find at bottom of this page.</p>
+<div style="white-space: pre-line;">0. First, i apologize for my poor english.
+    1. Signin and Login are needed for all contents.
+    2. We demand only ID and password.</p>
+    3. As we write in main page, we don't take any responsibility about Copyright.
+    4. If you want code in this service, can find at bottom of this page.</div>
 <hr>
+<br>
 <h2 id="information">Write simple imformation of Nodvel</h2>
-<p>1. I think there's noone that don't know about 'Title', right?</p>
-<p>2. 'Preview of story' is story introduction of Nodvel. Not all of story, just a little.</p>
-<p>3. You should choose 'Main genre' in the select.</p>
-<p>I know you can make SF horror romance story, but you can't choose all. Just main "ONE" genre.</p>
+<div style="white-space: pre-line;">1. I think there's no one that don't know about 'Title', right?
+    2. 'Preview of story' is story introduction of Nodvel. Not all of story, just a little.
+    3. You should choose 'Main genre' in the select. I know you can make SF horror romance story, but you can't choose all. Just main "ONE" genre.</div>
 <hr>
+<br>
 <h2 id="make">Make scene of Nodvel</h2>
+<div style="white-space: pre-line;">When you first make Nodvel. It will be unactive, it mean, other user can't see your nodvel until you push 'Finish writing' butten. So, if you want to let people see Nodvel. Must push butten.</div>
 <h3 id="divergence">1. 'Divergence' mean time line of story.</h3>
-<p>You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this.</p>
-<p>For example, if you make player choose 1 of 2 answer and that choice divide time line. It mean, there will be 2 divergence.</p>
-<p>'Divergence' is necessary thing. You must write down.</p>
-<p>Be care about divergence, wrong divergence mean wrong time line.</p>
+<div style="white-space: pre-line;">You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this. For example, if you make player choose 1 of 2 answer and that choice divide time line. It mean, there will be 2 divergence. 'Divergence' is necessary thing. You must write down. Be care about divergence, wrong divergence mean wrong time line.</div>
 <br>
 <h3 id="page">2. 'Page' mean one scene.</h3>
-<p>Page is also "Number", and recommended "Ascending" number of story procedure(1 -> 2 -> 3, like this).</p>
-<p>In one divergence, page that have same page number can't be exist.</p>
-<p>'Page' is also necessay. You must write down.</p>
-<p>Like divergence, page is important. Please think before write.</p>
+<div style="white-space: pre-line;">Page is also "Number", and recommended "Ascending" number of story procedure(1 -> 2 -> 3, like this). In one divergence, page that have same page number can't be exist. 'Page' is also necessay. You must write down. Like divergence, page is important. Please think before write.</div>
 <br>
 <h3 id="nextDivergence">3. 'Next divergence' mean divergence of next page.</h3>
-<p>To link page. Nodvel demand you to think about next page.</p>
-<p>For example, if i write one divergence story, next divergence must be same.</p>
-<p>Other thing is same as 'Divergence'.</p>
+<div style="white-space: pre-line;">To link page. Nodvel demand you to think about next page. For example, if i write one divergence story, next divergence must be same. Other thing is same as 'Divergence'.</div>
 <br>
 <h3 id="nextPage">4. 'Next page' is literally page number of next scene.</h3>
-<p>Same purpose with 'Next divergence'.</p>
-<p>If you want, you can link to past. When 'Page' is 15 and 'Next page' is 10, you can make player go to back scene.</p>
-<p>Other thing is also similar with 'Page'.</p>
+<div style="white-space: pre-line;">Same purpose with 'Next divergence'. If you want, you can link to past. When 'Page' is 15 and 'Next page' is 10, you can make player go to back scene. Other thing is also similar with 'Page'.</div>
 <br>
 <h3 id="memo">5. 'Memo' is simple comment about scene.</h3>
-<p>Not a necessary thing.</p>
-<p>When you search certain scene, server use 'memo' for searching.</p>
-<p>You can use as kind of bookmark.</p>
+<div style="white-space: pre-line;">Not a necessary thing. When you search certain scene, server use 'memo' for searching. You can use as kind of bookmark.</div>
 <br>
 <h3 id="images">6. 'Character' and 'Background' is image of it's own name.</h3>
-<p>Not a necessary thing.</p>
-<p>Before setting image, you must upload files first. After that, you can select image.</p>
-<p>Maximum number of 'character' is 4, minimum is 0. Yes, you can set all 'character' as "none".</p>
-<p>You can set 'background' also as "none" and it will make background black.</p>
-<p>If you set 'Choice' and 'Character' together, 'choice' has priority. It will go up.</p>
+<div style="white-space: pre-line;">Not a necessary thing. Before setting image, you must upload files first. After that, you can select image. Maximum number of 'character' is 4, minimum is 0. Yes, you can set all 'character' as "none". You can set 'background' also as "none" and it will make background black. If you set 'Choice' and 'Character' together, 'choice' has priority. It will go up.</div>
 <br>
 <h3 id="text">7. 'Text' is character's words.</h3>
-<p>You must type name with words to show who is saying.</p>
-<p>For example, "Donald Trump: I like racism!". Who is Donald Trump, anyway?</p>
-<p>And replaceing line is not allowed. Please, mind this.</p>
-<p>'Text' also used for searching.</p>
+<div style="white-space: pre-line;">You must type name with words to show who is saying. For example, "Donald Trump: I like racism!". Who is Donald Trump, anyway? And replaceing line is not allowed. Please, mind this. 'Text' also used for searching.</div>
 <br>
 <h3 id="choice">8. 'Choice' make player choose.</h3>
-<p>If your friend say "Hey dude! Wanna go party tonight?" you should choose what to say. 'choice' is same thing.</p>
-<p>Not only words, you can use for everything that you want.</p>
-<p>Each 'choice' have text, next divergence and next page. I believe you know already.</p>
-<p>Maximum number of 'choice' is 4, minimum is 0. Same as 'character'.</p>
+<div style="white-space: pre-line;">If your friend say "Hey dude! Wanna go party tonight?" you should choose what to say. 'choice' is same thing. Not only words, you can use for everything that you want. Each 'choice' have text, next divergence and next page. I believe you know already. Maximum number of 'choice' is 4, minimum is 0. Same as 'character'.</div>
+<hr>
+<br>
+<h2 id="rewrite">When you rewrite Nodvel</h2>
+<div style="white-space: pre-line;">Rewriting is similar with writing. So if you rewrite your Nodvel, it will be unactive, same as first writing. Rewriting will go on until you push 'Finish writing' butten. You can do this anytime and someone who watching Nodvel will be out automatically.</div>
+<hr>
 <br>
 
 <% include _footer %>
