--- a/views/writed.ejs
+++ b/views/writed.ejs
@@ -49,6 +49,9 @@
     <a>No background in this scene</a>
     <hr>
 <% } %>
+<hr>
+<a href="/writenodvel/<%= contents.title %>/<%= pagecontents.divergence %>/<%= (pagecontents.page + 1) %>" class="btn btn-default" style="float: right;">Next page</a>
+<a href="/writenodvel/rewrite/<%= contents.title %>/<%= pagecontents.divergence %>/<%= pagecontents.page %>" class="btn btn-default" style="float: left;">Rewrite</a>"
 
 <% include _move %>
 
