--- a/views/nodvel.ejs
+++ b/views/nodvel.ejs
@@ -23,13 +23,20 @@
             <% } %>
         <% } %>    
         <% if(count === 0) { %>
+            <form action="/nodvel/<%= nodvel.title %>" method="post">
+                <select name="like" style="display: none;">
+                    <option value="like" selected>like</option>
+                </select>
+                <input type="submit" class="btn btn-default" style="float: right;" value="Give like">
+            </form>
+        <% } %>
+    <% } else { %>
         <form action="/nodvel/<%= nodvel.title %>" method="post">
             <select name="like" style="display: none;">
                 <option value="like" selected>like</option>
             </select>
             <input type="submit" class="btn btn-default" style="float: right;" value="Give like">
         </form>
-        <% } %>
     <% } %>
     <a href="/nodvel/<%= contents.title %>/1/1" class="btn btn-default" style="width: 1100px; height: 30px;">Start Nodvel!</a>
     <% if(user.username === contents.writer) { %>
@@ -64,6 +71,7 @@
     </form>
     <br>
 <% } else { %>
+    <br>
     <a href="/writenodvel/rewrite/<%= nodvel.title %>" style="float: left;" class="btn btn-default">Change simple info</a>
     <form action="/nodvel/<%= nodvel.title %>" method="post">
         <select name="end" style="display: none;">
