--- a/views/writenodvel.ejs
+++ b/views/writenodvel.ejs
@@ -5,10 +5,17 @@
 <p>Writer : <%= writer %></p>
 <form action="/writenodvel" method="post">
 	<h4>Title</h4>
-	<input name="title" type="taxt" class="form-control" placeholder="Title" required>
-	<br>
-	<h4>Preview of story</h4>
-	<input name="story" type="text" class="form-control" placeholder="Story" required>
+	<% if(contents.titlt) { %>
+		<input name="title" type="taxt" class="form-control" value="<%= contents.title %>" required>
+		<br>
+		<h4>Preview of story</h4>
+		<input name="story" type="text" class="form-control" value="<%= contents.story %>" required>
+	<% } else { %>
+		<input name="title" type="taxt" class="form-control" placeholder="Title" required>
+		<br>
+		<h4>Preview of story</h4>
+		<input name="story" type="text" class="form-control" placeholder="Story" required>
+	<% } %>
 	<br>
 	<h4>Select main genre</h4>
 	<select name="genre" class="selectpicker" style="width: 400px; height: 40px; line-height: 40px;" required>
@@ -20,7 +27,6 @@
 		<option value="thriller">Thriller</option>
 		<option value="general">General</option>
 	</select>
-	<br>
 	<br>
     <input type="submit" value="Next" class="btn btn-default pull-right">
 	<a href="/" class="btn btn-default pull-left">Cancel</a>
