add a tag for searching

--- a/views/_move.ejs
+++ b/views/_move.ejs
@@ -5,4 +5,5 @@
     <input type="text" class="form-control" placeholder="Page" name="movePage" style="width: 100px; float: left;" required>
     <input type="submit" value="Move" class="btn btn-default" style="float: left;">
 </form>
+<a href="/writenodvel/search/<%= contents.title %>" class="btn btn-default" style="float: left;">Search page</a>
 <br>
