--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -50,6 +50,16 @@
 <br>
 <h3 id="choice">8. 'Choice' make player choose.</h3>
 <div style="white-space: pre-line;">If your friend say "Hey dude! Wanna go party tonight?" you should choose what to say. 'choice' is same thing. Not only words, you can use for everything that you want. Each 'choice' have text, next divergence and next page. I believe you know already. Maximum number of 'choice' is 4, minimum is 0. Same as 'character'.</div>
+<br>
+<h3 id="choice">9. All contents have their own layer.</h3>
+<div style="white-space: pre-line;">If you use all contents, it can be blocked by other content. For example, 'Background' have lowest layer and 'choice' have highest layer. It make 'choice' block 'background'. We'll show you layer number of contents.</div>
+<ul>
+    <li><h4>Higher number is higher layer.</h4></li>
+    <li>background -> layer 1</li>
+    <li>character -> layer 2</li>
+    <li>text -> layer 3</li>
+    <li>choice -> layer 4</li>
+</ul>
 <hr>
 <br>
 <h2 id="rewrite">When you rewrite Nodvel</h2>
